Fix sizing on smallest screen

--- a/client/styles/base/_base.scss
+++ b/client/styles/base/_base.scss
@@ -11,7 +11,7 @@
 body {
   display: block;
   background-color: $off-white; 
-  min-width: 400px !important;
+  min-width: 320px !important;
 }
 
 a {
